# graphics-demo

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_SUMMARY.md  README.md  TECHNICAL.md  VISUAL_GUIDE.md  build.sh  main.cpp
_codeql_build_dir/: Makefile
_codeql_build_dir/shaders/: fragment_balanced.glsl  vertex.glsl
examples/: USAGE_EXAMPLES.md
include/: renderer.h  shader.h
shaders/: fragment.glsl  fragment_hq.glsl  fragment_perf.glsl
shared_sources/glad/: gl_core_33.c  gl_core_33.h
src/: main.cpp  renderer.cpp  shader.cpp
